hyprland: use mate-polkit for system auth

--- a/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
@@ -22,7 +22,7 @@ packages=(
 
     # hyprland
     hyprland
-    polkit # authentication agent
+    mate-polkit # authentication agent
     hyprpaper # wallpaper
     hypridle hyprlock # lock screen on idle
     wofi # app launcher
