jj: add alternative default log template

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -7,6 +7,7 @@ push-bookmark-prefix = "remo/"
 
 [ui]
 default-command = ["log", "--template", "my_log_compact_comfortable"]
+# default-command = ["log", "--template", "builtin_log_comfortable"]
 default-description = "\n"
 diff-editor = ":builtin"
 # diff.tool = ["difft", "--color=always", "--syntax-highlight", "off", "$left", "$right"]
