install roboto mono as package

--- a/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
@@ -8,6 +8,7 @@ echo "Installing GUI stuff..."
 packages=(
     wl-clipboard
     alacritty
+    google-roboto-mono-fonts
     f34-backgrounds-gnome
     codium
     openscad clang-tools-extra
