improve organization of repositories
The previous (~/repos/$repo_name) had drawbacks:
- There could be name clashes, e.g. rust-lang/rust & exercism/rust.
- Domain & owner specific repo configuration is difficult.
  (have to use chezmoi, templating, 1Password...)

The new scheme (~/repos/$domain/$owner/$repo_name) fixes these issues:
- No more name clashes.
- Granular config is easier. Just put it in the directory ($domain/config or
  $owner/config) and copy/append that to repo config while cloning.
  Scripting is still required (see clone.nu).
  -> I added a domain-specific push-prefix for jj because it's easier now.

I also want to move away from storing templating data in 1Password, _unless_
it's actually a secret. Emails, repos to clone etc. aren't secret. I don't like
the fact that this data is not actually under version control. And it's a worse
editing experience. My dislike for this system made me avoid some customization
in the past.

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -1,6 +1,6 @@
 [user]
 name = "Remo Senekowitsch"
-email = "{{ .op.email }}"
+email = "remo@buenzli.dev"
 
 [git]
 push-bookmark-prefix = "remo/"
@@ -33,7 +33,7 @@ s  = ["show"]
 yolo = ["config", "set", "--repo", "revset-aliases.'immutable_heads()'", "root()"]
 yolont = ["config", "unset", "--repo", "revset-aliases.'immutable_heads()'"]
 drag = ["bookmark", "move", "--to", "@-"]
-track-mine = ["bookmark", "track", "glob:remo/*@origin"]
+track-mine = ["bookmark", "track", "glob:remo/*@origin", "glob:senekor/*@origin", "glob:senk/*@origin"]
 
 # [scripts]
 clone = ["util", "exec", "--", "{{ .chezmoi.homeDir }}/.config/jj/scripts/clone.nu"]
