--- a/dot_config/exercism/user.json.tmpl
+++ b/dot_config/exercism/user.json.tmpl
@@ -1,5 +1,5 @@
 {
   "apibaseurl": "https://api.exercism.io/v1",
-  "token": "{{ .op.exercism_api_token }}",
+  "token": "{{ .exercism_api_token }}",
   "workspace": "{{ .chezmoi.homeDir }}/repos/exercism"
 }
