--- a/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
@@ -35,5 +35,10 @@ cargo binstall --no-confirm --log-level warn "${packages[@]}"
 
 [ -d "$HOME/.local/bin" ] || mkdir -p "$HOME/.local/bin"
 
+if ! which deno &> /dev/null ; then
+    export DENO_INSTALL=~/.local
+    sh <(curl -fsSL https://deno.land/install.sh) --yes --no-modify-path
+fi
+
 # {{ template "skipOnServer" . }}
 cargo binstall --no-confirm --log-level warn openscad-lsp
