clone jj from jj-vcs org

--- a/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
+++ b/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
@@ -18,7 +18,7 @@ echo "Cloning git repos..."
 repos=(
     github.com/rust-lang/www.rust-lang.org
     github.com/exercism/rust-test-runner
-    github.com/martinvonz/jj
+    github.com/jj-vcs/jj
     git.buenzli.dev/remo/async-rust-yoink
 # {{- if eq .org "zhaw" }}
     github.zhaw.ch/senk/vt-embedded-linux-driver-rust
