install signal messenger

--- a/.chezmoiscripts/1_install/run_onchange_after_3_flathub.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_flathub.sh.tmpl
@@ -10,6 +10,7 @@ packages=(
     org.telegram.desktop
     md.obsidian.Obsidian
     org.chromium.Chromium
+    org.signal.Signal
 )
 
 flatpak install --noninteractive flathub "${packages[@]}"
