jj: avoid deprecated template function

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -64,9 +64,9 @@ if(root,
       if(divergent, format_short_commit_id(commit_id)),
       if(conflict, label("conflict", "conflict")),
       if(author.email(),
-        if(author.username().contains("dependabot"),
-          author.username().substr(9, 19),
-          author.username(),
+        if(author.email().local().contains("dependabot"),
+          author.email().local().substr(9, 19),
+          author.email().local(),
         ),
         email_placeholder,
       ),
