clone raspi-deploy repo

--- a/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
+++ b/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
@@ -31,6 +31,7 @@ repos=(
 
 # {{- if eq .org "none" }}
     git.buenzli.dev/remo/aoc
+    git.buenzli.dev/remo/raspi-deploy
     git.buenzli.dev/remo/async-rust-yoink
     git.buenzli.dev/remo/data-structure-exercises
     git.buenzli.dev/remo/keyboard-layouts
