--- a/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
+++ b/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
@@ -26,6 +26,7 @@ repos=(
     github.com/exercism/rust
     github.com/exercism/rust-test-runner
     github.com/jj-vcs/jj
+    github.com/helix-editor/helix
 
     github.zhaw.ch/senk/vt-embedded-linux-driver-rust
 
