niri: install niri

--- a/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
@@ -37,6 +37,9 @@ packages=(
     pavucontrol # audio GUI
     brightnessctl # laptop screen brightness
     cmake meson cpio hyprland-devel # hyprpm
+
+    # niri
+    niri
 )
 installed="$(dnf list --installed)"
 for package in "${packages[@]}"; do
