jj: add commit interactive alias (ci)

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -16,6 +16,7 @@ merge-tool-edits-conflict-markers = true
 [aliases]
 b  = ["bookmark"]
 c  = ["commit"]
+ci = ["commit", "--interactive"]
 d  = ["describe"]
 e  = ["edit"]
 f  = ["git", "fetch", "--all-remotes"]
