--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -6,6 +6,7 @@ email = "remo@buenzli.dev"
 
 [git]
 push-bookmark-prefix = "remo/" # fallback, usually overwritten by `jj clone`
+subprocess = true
 
 [ui]
 default-command = ["log", "--template", "my_log_compact_comfortable"]
