jj: enable git.push-new-bookmarks

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -6,6 +6,7 @@ email = "remo@buenzli.dev" # default, overruled by domain-specific setting
 
 [git]
 push-bookmark-prefix = "remo/" # default, overruled by domain-specific setting
+push-new-bookmarks = true
 subprocess = true
 sign-on-push = true
 
