jj: set email to exactly 4 chars in log

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -86,10 +86,10 @@ if(root,
       if(divergent, format_short_commit_id(commit_id)),
       if(conflict, label("conflict", "conflict")),
       if(author.email(),
-        if(author.email().local().contains("dependabot"),
-          author.email().local().substr(9, 19),
-          author.email().local(),
-        ),
+        pad_end(4, if(author.email().local().contains("dependabot"),
+          author.email().local().substr(9, 13),
+          author.email().local().substr(0, 4),
+        )),
         email_placeholder,
       ),
       bookmarks,
