--- a/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
@@ -47,7 +47,19 @@ for package in "${packages[@]}"; do
     fi
 done
 
-GH_TOKEN="$(op read "op://Personal/GitHub Personal Access Token/token")" gh extension install yusukebe/gh-markdown-preview
+# Don't forget to update the version in the desktop entry !
+rr_version="2024.3.4"
+if ! test -d "/opt/RustRover-$rr_version" ; then
+    echo "Downloading and extracting RustRover..."
+    curl -L "https://download.jetbrains.com/rustrover/RustRover-$rr_version.tar.gz" \
+        | sudo tar xz --directory /opt
+fi
+
+if ! test -d "$HOME/.local/share/gh/extensions/gh-markdown-preview" ; then
+    echo "Downloading and gh-markdown-preview..."
+    GH_TOKEN="$(op read "op://Personal/GitHub Personal Access Token/token")" \
+        gh extension install yusukebe/gh-markdown-preview
+fi
 
 # hyprland plugins
 if [ -n "$HYPRLAND_INSTANCE_SIGNATURE" ] && ! hyprpm list | grep hyprfocus > /dev/null ; then
