jj: add alias for git push --all

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -38,6 +38,7 @@ f  = ["git", "fetch", "--all-remotes"]
 l  = ["log", "--template", "custom_log_oneline", "--revisions", "ancestors(@)"]
 g  = ["log", "--template", "custom_log_oneline", "--revisions", "all()"]
 p  = ["git", "push"]
+pa = ["git", "push", "--all"]
 r  = ["rebase"]
 s  = ["show"]
 
