--- a/private_dot_ssh/private_config.tmpl
+++ b/private_dot_ssh/private_config.tmpl
@@ -4,15 +4,15 @@
 Match host * exec "test -z $SSH_CONNECTION"
   IdentityAgent "~/.1password/agent.sock"
 
-Host gh
+Host github
   User git
   HostName github.com
 
-Host ghz
+Host zhaw
   User git
   HostName github.zhaw.ch
 
-Host bg
+Host buenzli
   User git
   HostName git.buenzli.dev
 
