--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -44,7 +44,6 @@ s  = ["show"]
 
 yolo = ["config", "set", "--repo", "revset-aliases.'immutable_heads()'", "root()"]
 yolont = ["config", "unset", "--repo", "revset-aliases.'immutable_heads()'"]
-drag = ["bookmark", "move", "--to", "@-"]
 track-mine = ["bookmark", "track", "regex:(remo|senekor|senk)/.*@.*"]
 
 # [scripts]
@@ -56,6 +55,18 @@ bgi   = [
   "--",
 ]
 play  = ["bgi", "jj-play"]
+tug = ["util", "exec", "--", "bash", "-c", """
+#!/usr/bin/env bash
+set -euo pipefail
+
+for parent in $(jj log --no-graph --revisions @- --template 'commit_id ++ "\n"')
+do
+    jj --ignore-working-copy \
+        bookmark move \
+        --from "heads(::$parent & bookmarks())" \
+        --to "$parent"
+done
+""", ""]
 
 [revsets]
 log = "present(@) | ancestors(trunk()..mine(), 2) | trunk()"
