--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -144,3 +144,9 @@ coalesce(
   )
 )
 '''
+
+[colors]
+"tag" = { fg = "magenta", underline = true}
+"tags" = { fg = "magenta", underline = true }
+"working_copy tag" = { fg = "bright magenta", underline = true }
+"working_copy tags" = { fg = "bright magenta", underline = true }
