--- a/dot_config/exercism/user.json.tmpl
+++ b/dot_config/exercism/user.json.tmpl
@@ -1,5 +1,5 @@
 {
   "apibaseurl": "https://api.exercism.io/v1",
   {{ if not .isServer }}"token": "{{ .exercism_api_token }}",{{ end }}
-  "workspace": "{{ .chezmoi.homeDir }}/repos/exercism"
+  "workspace": "{{ .chezmoi.homeDir }}/repos/github/senekor/exercism"
 }
