disable commit signing on server
Doesn't work because 1Password isn't running on the server.

--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -1,3 +1,4 @@
+# chezmoi:template:left-delimiter="# {{"
 [advice]
 	detachedHead = false
 [branch]
@@ -7,7 +8,9 @@
 [clean]
 	requireForce = false
 [commit]
+# {{- if not .isServer }}
 	gpgsign = true
+# {{- end }}
 	verbose = true
 [diff]
 	algorith = histogram
