--- a/dot_config/fish/conf.d/gh_cli.fish.tmpl
+++ b/dot_config/fish/conf.d/gh_cli.fish.tmpl
@@ -1,4 +1,9 @@
-set --export GH_TOKEN "$(cat ~/.local/share/gh_token_ro)"
+# chezmoi:template:left-delimiter="# {{"
+# {{ if not .isServer -}}
+# This token is read-only. It makes stuff like `mdp` work without auth.
+set --export GH_TOKEN # {{ onepasswordRead "op://Personal/drdd2i4hfe3ewrxmqg63gpn7ge/token" }}
+
+# {{ end -}}
 
 if status is-interactive
     function gh --wraps gh --description 'gh alias with auth token'
