make dotfiles setup script idempotent

--- a/.chezmoiscripts/3_configure/run_onchange_after_setup_dotfiles_repo.sh.tmpl
+++ b/.chezmoiscripts/3_configure/run_onchange_after_setup_dotfiles_repo.sh.tmpl
@@ -2,5 +2,7 @@
 set -euo pipefail
 
 cd "{{ .chezmoi.sourceDir }}"
-jj git init --colocate
-jj bookmark track main@origin
+if ! test -d .jj ; then
+    jj git init --colocate
+    jj bookmark track main@origin
+fi
